--- a/east_text_detection.ipynb
+++ b/east_text_detection.ipynb
@@ -7,25 +7,35 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_img(opencv_image):\n",
+    "    \"\"\"\n",
+    "    Converts Opencv Image via Matplotlib\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    plt_image = opencv_image\n",
+    "    if opencv_image.shape[-1] == 3:\n",
+    "        plt_image = cv2.cvtColor(opencv_image, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "        \n",
+    "    plt.imshow(plt_image)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confThreshold = 0.5\n",
-    "nmsThreshold = 0.4\n",
-    "inpWidth = 320\n",
-    "inpHeight = 320\n",
-    "model = 'frozen_east_text_detection.pb'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +96,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confThreshold = 0.5\n",
+    "nmsThreshold = 0.4\n",
+    "inpWidth = 320\n",
+    "inpHeight = 320\n",
+    "model = 'frozen_east_text_detection.pb'\n",
+    "img_path = 'images/handwritten.jpg'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +134,24 @@
     "\n",
     "outNames = []\n",
     "outNames.append(\"feature_fusion/Conv_7/Sigmoid\")\n",
-    "outNames.append(\"feature_fusion/concat_3\")\n",
-    "\n",
+    "outNames.append(\"feature_fusion/concat_3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read the image\n",
+    "image = cv2.imread(img_path)\n",
     "\n",
     "# Get image height and width\n",
     "height_ = image.shape[0]\n",
@@ -107,20 +161,64 @@
     "\n",
     "# Create a 4D blob from image.\n",
     "blob = cv2.dnn.blobFromImage(image, scalefactor=1.0, size=(inpWidth, inpHeight),\n",
-    "                             mean=(123.68, 116.78, 103.94), swapRB=True, crop=False)\n",
-    "\n",
-    "# Run the model\n",
+    "                             mean=(123.68, 116.78, 103.94), swapRB=True, crop=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "net.setInput(blob)\n",
     "outs = net.forward(outNames)\n",
-    "t, _ = net.getPerfProfile()\n",
-    "\n",
-    "# Get scores and geometry\n",
+    "t, _ = net.getPerfProfile()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get scores and geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scores = outs[0]\n",
     "geometry = outs[1]\n",
-    "[boxes, confidences] = decode(scores, geometry, confThreshold)\n",
+    "[boxes, confidences] = decode(scores, geometry, confThreshold)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post-processing to remove weak & overlapping bounding-boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply Non-Max Suppression (NMS)\n",
+    "indices = cv2.dnn.NMSBoxesRotated(boxes, confidences, confThreshold,nmsThreshold)\n",
     "\n",
-    "# Apply NMS\n",
-    "indices = cv2.dndn.NMSBoxesRotated(boxes, confidences, confThreshold,nmsThreshold)\n",
+    "# #Ignore Non-Max Suppression\n",
+    "# indices = [[i] for i in range(len(boxes))]\n",
+    "\n",
     "for i in indices:\n",
     "    # get 4 corners of the rotated rect\n",
     "    vertices = cv2.boxPoints(boxes[i[0]])\n",
@@ -131,8 +229,27 @@
     "    for j in range(4):\n",
     "        p1 = (vertices[j][0], vertices[j][1])\n",
     "        p2 = (vertices[(j + 1) % 4][0], vertices[(j + 1) % 4][1])\n",
-    "        cv2.line(image, p1, p2, (0, 255, 0), 1);\n",
-    "        "
+    "        cv2.line(image, p1, p2, (0, 255, 0), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('text_detection_result.jpg', image)"
    ]
   }
  ],
