Added autoscaling feature, automatically determine minimum scaling required for input dimensions to be multiple of '32'

--- a/east_text_detection.ipynb
+++ b/east_text_detection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_scaled_dims(height, width):\n",
+    "    \"\"\"\n",
+    "    Calculate the minimum down-scaling required to make dimensions multiple of 32\n",
+    "    \"\"\"\n",
+    "    new_height = ((height//32)) * 32\n",
+    "    new_width = ((width//32)) * 32\n",
+    "    \n",
+    "    return new_height, new_width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Model path\n",
+    "model = 'frozen_east_text_detection.pb'\n",
+    "\n",
+    "#Model Parameters\n",
     "confThreshold = 0.5\n",
     "nmsThreshold = 0.4\n",
-    "inpWidth = 320\n",
-    "inpHeight = 320\n",
-    "model = 'frozen_east_text_detection.pb'\n",
-    "img_path = 'images/handwritten.jpg'"
+    "\n",
+    "#Input Parameters\n",
+    "img_path = 'images/sign.jpg'\n",
+    "inpWidth = None\n",
+    "inpHeight = None"
    ]
   },
   {
@@ -125,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +177,19 @@
     "# Get image height and width\n",
     "height_ = image.shape[0]\n",
     "width_ = image.shape[1]\n",
-    "rW = width_ / float(inpWidth)\n",
-    "rH = height_ / float(inpHeight)\n",
+    "\n",
+    "#Automatically calculate minimal scaling required..\n",
+    "if inpHeight is None and inpWidth is None: \n",
+    "    inpHeight, inpWidth = get_scaled_dims(height_, width_)\n",
+    "    image = cv2.resize(image, (inpWidth,inpHeight), interpolation=cv2.INTER_AREA)\n",
+    "    rW,rH = 1,1\n",
+    "    \n",
+    "else:\n",
+    "    rW = width_ / float(inpWidth)\n",
+    "    rH = height_ / float(inpHeight)\n",
     "\n",
     "# Create a 4D blob from image.\n",
-    "blob = cv2.dnn.blobFromImage(image, scalefactor=1.0, size=(inpWidth, inpHeight),\n",
-    "                             mean=(123.68, 116.78, 103.94), swapRB=True, crop=False)"
+    "blob = cv2.dnn.blobFromImage(image, scalefactor=1.0, mean=(123.68, 116.78, 103.94), swapRB=True, crop=False)"
    ]
   },
   {
@@ -173,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +254,8 @@
     "    for j in range(4):\n",
     "        vertices[j][0] *= rW\n",
     "        vertices[j][1] *= rH\n",
+    "    \n",
+    "    #Draw the bounding boxes\n",
     "    for j in range(4):\n",
     "        p1 = (vertices[j][0], vertices[j][1])\n",
     "        p2 = (vertices[(j + 1) % 4][0], vertices[(j + 1) % 4][1])\n",
@@ -234,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +273,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
